--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
           <li><a href="https://www.30cc.be/nl" target="_blank">30CC Schouwburg</a></li>
           <li><a href="https://www.instagram.com/foliefashionleuven/" target="_blank">Folie Leuven</a></li>
           <li><a href="https://www.deslegte.com/leuven/" target="_blank">De Slegte Leuven</a></li>
-          <li>Locatie 5</li>
-          <li>Locatie 6</li>
-          <li>Locatie 7</li>
-          <li>Locatie 8</li>
-          <li>Locatie 9</li>
-          <li>Locatie 10</li>
+          <li><a href="#" target="_blank">Locatie 5 — binnenkort aangekondigd</a></li>
+          <li><a href="#" target="_blank">Locatie 6 — binnenkort aangekondigd</a></li>
+          <li><a href="#" target="_blank">Locatie 7 — binnenkort aangekondigd</a></li>
+          <li><a href="#" target="_blank">Locatie 8 — binnenkort aangekondigd</a></li>
+          <li><a href="#" target="_blank">Locatie 9 — binnenkort aangekondigd</a></li>
+          <li><a href="#" target="_blank">Locatie 10 — binnenkort aangekondigd</a></li>
         </ul>
       </div>
     </section>
