--- a/index.html
+++ b/index.html
@@ -10,47 +10,16 @@
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 
   <style>
-    /* ===== Base ===== */
     :root {
-      --fg: #111111;
       --fg: #111;
       --muted: #6f6f6f;
       --line: #e9e9e9;
       --max: 1200px;
-      --ff-sans: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
       --ff-sans: Inter, system-ui, sans-serif;
       --ff-serif: 'EB Garamond', serif;
-      --ff-mono: 'IBM Plex Mono', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; /* accent */
       --ff-mono: 'IBM Plex Mono', monospace;
     }
     *,*::before,*::after{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      color:var(--fg);
-      background:#ffffff;
-      font-family: var(--ff-sans);
-      font-size:16px; line-height:1.7; letter-spacing:0.01em;
-    }
-    img{display:block; max-width:100%; height:auto}
-    a{color:inherit; text-decoration:none}
-    h1,h2{font-family:var(--ff-serif); font-weight:400; letter-spacing:.01em;}
-    h1{font-size:clamp(40px,6vw,72px); line-height:1.05; margin:0}
-    h2{font-size:clamp(26px,3.6vw,42px); line-height:1.15; margin:0 0 12px}
-    p{margin:0}
-
-    /* ===== Header ===== */
-    header{position:sticky; top:0; z-index:40; background:#fff; border-bottom:1px solid var(--line)}
-    .nav{max-width:var(--max); margin:0 auto; padding:14px 20px; display:flex; align-items:center; justify-content:space-between}
-    .brand{font-family:var(--ff-serif); font-size:22px; font-weight:400; letter-spacing:.04em}
-    .menu{display:flex; gap:22px; align-items:center}
-    .menu a{font-size:12px; text-transform:uppercase; letter-spacing:.16em; opacity:.9}
-    .menu a:hover{ text-decoration: underline; text-decoration-thickness:1px; text-underline-offset:4px; }
-
-    /* ===== Hero ===== */
-    .hero{min-height:72vh; display:grid; place-items:center; padding:10vh 20px}
-    .hero-inner{max-width:900px; text-align:center}
-    .lead{margin-top:16px; color:var(--muted)}
     body{margin:0; font-family:var(--ff-sans); color:var(--fg); background:#fff;}
     img{display:block; max-width:100%}
     a{text-decoration:none; color:inherit}
@@ -58,51 +27,47 @@
     h1{font-size:clamp(40px,6vw,72px);}
     h2{font-size:clamp(26px,3.6vw,42px); margin:0 0 12px}
 
-    header{position:sticky; top:0; background:#fff; border-bottom:1px solid var(--line)}
-    .nav{max-width:var(--max); margin:0 auto; padding:14px 20px; display:flex; justify-content:space-between; align-items:center}
-    .brand{font-family:var(--ff-serif); font-size:22px;}
-    .menu{display:flex; gap:22px}
-    .menu a{font-size:12px; text-transform:uppercase; letter-spacing:.16em;}
-    .menu a:hover{text-decoration:underline;}
+    /* Header */
+    header{position:sticky; top:0; background:rgba(255,255,255,0.95); backdrop-filter:saturate(160%) blur(8px); border-bottom:1px solid var(--line); z-index:50;}
+    .nav{max-width:var(--max); margin:0 auto; padding:16px 24px; display:flex; justify-content:space-between; align-items:center}
+    .brand{font-family:var(--ff-serif); font-size:24px; letter-spacing:.04em}
+    .menu{display:flex; gap:22px; align-items:center}
+    .menu a{font-size:13px; text-transform:uppercase; letter-spacing:.14em; opacity:.9}
+    .menu a:hover{text-decoration:underline; text-underline-offset:4px;}
 
-    /* ===== Sections ===== */
     section{padding:80px 20px}
     .container{max-width:var(--max); margin:0 auto}
     .meta{font-family:var(--ff-mono); font-size:12px; color:var(--muted); margin-bottom:12px; text-transform:uppercase;}
 
-    /* Editorial modules (image-forward, no borders/shadows) */
-    .modules{display:grid; grid-template-columns:1fr; gap:80px;}
-    .module{display:grid; gap:12px}
-    .caption{color:var(--muted); font-size:14px; letter-spacing:.02em; font-family: var(--ff-mono);}
-
-    @media (min-width: 900px){
-      .modules.two-col{grid-template-columns:1fr 1fr; gap:60px}
-      .module.align-bottom{align-self:end}
-    }
-
-    /* ===== Accent (code-looking) usage ===== */
-    .meta{color:var(--muted); font-size:12px; letter-spacing:.12em; text-transform:uppercase; margin-bottom:12px; font-family: var(--ff-mono);} /* accent font */
-    .mono-link{font-family: var(--ff-mono); text-decoration: underline; text-underline-offset: 3px; text-decoration-thickness: 1px;}
     .modules{display:grid; gap:40px}
     .two-col{grid-template-columns:1fr;}
     @media(min-width:900px){.two-col{grid-template-columns:1fr 1fr;}}
 
-    /* ===== Footer ===== */
-    footer{border-top:1px solid var(--line); margin-top:40px}
-    .footer-inner{max-width:var(--max); margin:0 auto; padding:22px 20px; display:flex; justify-content:space-between; color:#777; font-size:12px}
+    .location-list{display:grid; gap:30px; margin-top:30px;}
+    .location-item h3{font-family:var(--ff-serif); font-size:20px; margin:0 0 6px;}
+    .location-item p{margin:0; font-size:14px; color:var(--muted);}
 
-    /* ===== Smooth scroll ===== */
-    html{scroll-behavior:smooth}
+    footer{border-top:1px solid var(--line); margin-top:40px}
     .footer-inner{max-width:var(--max); margin:0 auto; padding:22px 20px; display:flex; justify-content:space-between; font-size:12px; color:#777}
+      /* Burger nav + drawer (from the version you liked) */
+    .burger{display:none;border:1px solid var(--line);background:transparent;padding:8px 10px}
+    .burger span{display:block;width:22px;height:1.5px;background:var(--fg);margin:4px 0}
+    @media (max-width:860px){
+      .menu{display:none}
+      .burger{display:block}
+      .drawer{position:fixed;inset:64px 16px auto 16px;background:#fff;border:1px solid var(--line);padding:8px}
+      .drawer a{display:block;padding:14px 10px;border-bottom:1px solid var(--line);text-transform:uppercase;font-size:13px;letter-spacing:.11em}
+      .drawer a:last-child{border-bottom:none}
+      .drawer{display:none}
+      .drawer.open{display:block}
+    }
   </style>
 </head>
 <body>
-  <!-- Header -->
   <header>
     <nav class="nav" aria-label="Hoofdnavigatie">
-    <nav class="nav">
       <a href="#top" class="brand">VITRIEN</a>
-      <div class="menu">
+      <div class="menu" role="menubar">
         <a href="#over">Over</a>
         <a href="#praktisch">Data & locaties</a>
         <a href="#opencall">Open call</a>
@@ -110,76 +75,94 @@
         <a href="#lov">LOV2030</a>
         <a href="#contact">Contact</a>
       </div>
+      <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
+        <span></span><span></span><span></span>
+      </button>
     </nav>
+    <div class="drawer" id="drawer" aria-hidden="true">
+      <a href="#over" onclick="toggleDrawer()">Over</a>
+      <a href="#praktisch" onclick="toggleDrawer()">Data & locaties</a>
+      <a href="#opencall" onclick="toggleDrawer()">Open call</a>
+      <a href="#kunstenaars" onclick="toggleDrawer()">Kunstenaars</a>
+      <a href="#lov" onclick="toggleDrawer()">LOV2030</a>
+      <a href="#contact" onclick="toggleDrawer()">Contact</a>
+    </div>
   </header>
 
   <main id="top">
-    <!-- HERO -->
     <section class="hero">
-      <div class="hero-inner">
       <div class="container">
         <h1>Winkelramen als tijdelijke tentoonstellingen.</h1>
-        <p class="lead">Een rustige route door Leuven. Bestaand werk. Veel licht. Publieke ruimte als galerie.</p>
         <p class="lead">Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie.</p>
       </div>
     </section>
 
-    <!-- OVER -->
     <section id="over">
       <div class="container">
         <div class="meta">Over</div>
         <h2>Vitrien</h2>
-        <p>We koppelen kunstenaars aan winkels en laten vitrines spreken. Geen poespas: enkel goed werk, helder gepresenteerd, in dialoog met de straat.</p>
+        <p>Vitrien is een nomadisch kunstinitiatief dat onverwachte of leegstaande plekken in de stad tijdelijk activeert met unieke tentoonstellingen. Kunst duikt op waar je het niet verwacht: in winkelruiten, leegstaande panden, of zelfs in een parkeergarage. Zo wordt de straat zelf een galerij.</p>
       </div>
     </section>
 
-    <!-- EDITORIAL BLOKKEN -->
-    <section>
-      <div class="container modules two-col">
-        <figure class="module">
-          <img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?q=80&w=1600&auto=format&fit=crop" alt="Etalage met kunst (placeholder)">
-          <figcaption class="caption">Beeld ter illustratie • vervang door eigen foto</figcaption>
-        </figure>
-        <figure class="module align-bottom">
-          <img src="https://images.unsplash.com/photo-1520697222861-e17a49d0b3af?q=80&w=1600&auto=format&fit=crop" alt="Detail werk (placeholder)">
-          <figcaption class="caption">Detail • vervang door eigen foto</figcaption>
-        </figure>
-        <p>Kunstenaars worden gekoppeld aan winkels en laten vitrines spreken. Publieke ruimte wordt galerie, in dialoog met de straat.</p>
-      </div>
-    </section>
-
-    <!-- PRAKTISCH -->
     <section id="praktisch">
       <div class="container">
         <div class="meta">Praktisch</div>
         <h2>Data & Locaties</h2>
         <p><strong>Opening</strong> 13 september, 15:00–20:00 · <strong>Expo</strong> 13 september – 5 oktober</p>
-        <ul>
-          <li><a href="https://wear-store.be/pages/our-stores" target="_blank">Wear Store</a></li>
-          <li><a href="https://www.30cc.be/nl" target="_blank">30CC Schouwburg</a></li>
-          <li><a href="https://www.instagram.com/foliefashionleuven/" target="_blank">Folie Leuven</a></li>
-          <li><a href="https://www.deslegte.com/leuven/" target="_blank">De Slegte Leuven</a></li>
-          <li>Locatie 5</li>
-          <li>Locatie 6</li>
-          <li>Locatie 7</li>
-          <li>Locatie 8</li>
-          <li>Locatie 9</li>
-          <li>Locatie 10</li>
-        </ul>
+        <div class="location-list">
+          <div class="location-item">
+            <h3><a href="https://wear-store.be/pages/our-stores" target="_blank">Wear Store</a></h3>
+            <p>Leuven · Verschillende filialen</p>
+          </div>
+          <div class="location-item">
+            <h3><a href="https://www.30cc.be/nl" target="_blank">30CC Schouwburg</a></h3>
+            <p>Bondgenotenlaan 21, Leuven</p>
+          </div>
+          <div class="location-item">
+            <h3><a href="https://www.instagram.com/foliefashionleuven/" target="_blank">Folie Leuven</a></h3>
+            <p>Tiensestraat 39, Leuven</p>
+          </div>
+          <div class="location-item">
+            <h3><a href="https://www.deslegte.com/leuven/" target="_blank">De Slegte Leuven</a></h3>
+            <p>Diestsestraat 72, Leuven</p>
+          </div>
+          <div class="location-item">
+            <h3>Locatie 5 — binnenkort aangekondigd</h3>
+            <p>Adres volgt</p>
+          </div>
+          <div class="location-item">
+            <h3>Locatie 6 — binnenkort aangekondigd</h3>
+            <p>Adres volgt</p>
+          </div>
+          <div class="location-item">
+            <h3>Locatie 7 — binnenkort aangekondigd</h3>
+            <p>Adres volgt</p>
+          </div>
+          <div class="location-item">
+            <h3>Locatie 8 — binnenkort aangekondigd</h3>
+            <p>Adres volgt</p>
+          </div>
+          <div class="location-item">
+            <h3>Locatie 9 — binnenkort aangekondigd</h3>
+            <p>Adres volgt</p>
+          </div>
+          <div class="location-item">
+            <h3>Locatie 10 — binnenkort aangekondigd</h3>
+            <p>Adres volgt</p>
+          </div>
+        </div>
       </div>
     </section>
 
-    <!-- OPEN CALL -->
     <section id="opencall">
       <div class="container">
         <div class="meta">Voor makers</div>
         <h2>Open call</h2>
-        <p>We zoeken bestaand werk dat werkt in een vitrine. Stuur 3–5 beelden en een korte bio. <a class="mono-link" href="#">Dien in</a></p>
         <p>We zoeken bestaand werk dat werkt in een vitrine. Stuur 3–5 beelden en een korte bio. <a href="#">Dien in</a></p>
       </div>
     </section>
 
-    <!-- KUNSTENAARS (samengevatte tegels) -->
     <section id="kunstenaars">
       <div class="container">
         <div class="meta">Deelnemers</div>
@@ -256,11 +239,9 @@
             </figcaption>
           </figure>
         </div>
-        <p>Zie overzicht van kunstenaars met korte samenvatting en “lees meer” links.</p>
       </div>
     </section>
 
-    <!-- LOV2030 -->
     <section id="lov">
       <div class="container">
         <div class="meta">Context</div>
@@ -269,12 +250,10 @@
       </div>
     </section>
 
-    <!-- CONTACT -->
     <section id="contact">
       <div class="container">
         <div class="meta">Contact</div>
         <h2>Vragen of samenwerken?</h2>
-        <p>Mail: <a class="mono-link" href="mailto:hallo@vitrien.be">hallo@vitrien.be</a></p>
         <p>Mail: <a href="mailto:hallo@vitrien.be">hallo@vitrien.be</a></p>
       </div>
     </section>
@@ -283,14 +262,17 @@
   <footer>
     <div class="footer-inner">
       <div>© <span id="year"></span> Vitrien — Leuven</div>
-      <a class="mono-link" href="#top">Naar boven</a>
       <a href="#top">Naar boven</a>
     </div>
   </footer>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
   <script>document.getElementById('year').textContent=new Date().getFullYear()</script>
+  <script>
+    function toggleDrawer(){
+      const d=document.getElementById('drawer');
+      const open=d.classList.toggle('open');
+      d.setAttribute('aria-hidden', open ? 'false' : 'true');
+    }
+  </script>
 </body>
 </html>
