--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
     .two-col{grid-template-columns:1fr;}
     @media(min-width:900px){.two-col{grid-template-columns:1fr 1fr;}}
 
-    .location-list{display:grid; gap:30px; margin-top:30px;}
-    .location-item h3{font-family:var(--ff-serif); font-size:20px; margin:0 0 6px;}
-    .location-item p{margin:0; font-size:14px; color:var(--muted);}
+    .module img{width:100%; height:auto; border:1px solid var(--line)}
+    .caption{font-size:14px; line-height:1.5; margin-top:10px; color:var(--fg)}
+    .caption strong{font-family:var(--ff-serif); font-size:18px; display:block; margin-bottom:4px;}
+    .mono-link{font-family:var(--ff-mono); font-size:12px; text-transform:uppercase;}
 
     footer{border-top:1px solid var(--line); margin-top:40px}
     .footer-inner{max-width:var(--max); margin:0 auto; padding:22px 20px; display:flex; justify-content:space-between; font-size:12px; color:#777}
-      /* Burger nav + drawer (from the version you liked) */
+
+    /* Burger nav + drawer */
     .burger{display:none;border:1px solid var(--line);background:transparent;padding:8px 10px}
     .burger span{display:block;width:22px;height:1.5px;background:var(--fg);margin:4px 0}
     @media (max-width:860px){
@@ -110,47 +112,67 @@
         <div class="meta">Praktisch</div>
         <h2>Data & Locaties</h2>
         <p><strong>Opening</strong> 13 september, 15:00–20:00 · <strong>Expo</strong> 13 september – 5 oktober</p>
-        <div class="location-list">
-          <div class="location-item">
-            <h3><a href="https://wear-store.be/pages/our-stores" target="_blank">Wear Store</a></h3>
-            <p>Leuven · Verschillende filialen</p>
-          </div>
-          <div class="location-item">
-            <h3><a href="https://www.30cc.be/nl" target="_blank">30CC Schouwburg</a></h3>
-            <p>Bondgenotenlaan 21, Leuven</p>
-          </div>
-          <div class="location-item">
-            <h3><a href="https://www.instagram.com/foliefashionleuven/" target="_blank">Folie Leuven</a></h3>
-            <p>Tiensestraat 39, Leuven</p>
-          </div>
-          <div class="location-item">
-            <h3><a href="https://www.deslegte.com/leuven/" target="_blank">De Slegte Leuven</a></h3>
-            <p>Diestsestraat 72, Leuven</p>
-          </div>
-          <div class="location-item">
-            <h3>Locatie 5 — binnenkort aangekondigd</h3>
-            <p>Adres volgt</p>
-          </div>
-          <div class="location-item">
-            <h3>Locatie 6 — binnenkort aangekondigd</h3>
-            <p>Adres volgt</p>
-          </div>
-          <div class="location-item">
-            <h3>Locatie 7 — binnenkort aangekondigd</h3>
-            <p>Adres volgt</p>
-          </div>
-          <div class="location-item">
-            <h3>Locatie 8 — binnenkort aangekondigd</h3>
-            <p>Adres volgt</p>
-          </div>
-          <div class="location-item">
-            <h3>Locatie 9 — binnenkort aangekondigd</h3>
-            <p>Adres volgt</p>
-          </div>
-          <div class="location-item">
-            <h3>Locatie 10 — binnenkort aangekondigd</h3>
-            <p>Adres volgt</p>
-          </div>
+        <div class="modules two-col">
+          <figure class="module">
+            <figcaption class="caption">
+              <strong><a href="https://wear-store.be/pages/our-stores" target="_blank">Wear Store</a></strong>
+              Leuven · Verschillende filialen
+            </figcaption>
+          </figure>
+          <figure class="module">
+            <figcaption class="caption">
+              <strong><a href="https://www.30cc.be/nl" target="_blank">30CC Schouwburg</a></strong>
+              Bondgenotenlaan 21, Leuven
+            </figcaption>
+          </figure>
+          <figure class="module">
+            <figcaption class="caption">
+              <strong><a href="https://www.instagram.com/foliefashionleuven/" target="_blank">Folie Leuven</a></strong>
+              Tiensestraat 39, Leuven
+            </figcaption>
+          </figure>
+          <figure class="module">
+            <figcaption class="caption">
+              <strong><a href="https://www.deslegte.com/leuven/" target="_blank">De Slegte Leuven</a></strong>
+              Diestsestraat 72, Leuven
+            </figcaption>
+          </figure>
+          <figure class="module">
+            <figcaption class="caption">
+              <strong>Locatie 5 — binnenkort aangekondigd</strong>
+              Adres volgt
+            </figcaption>
+          </figure>
+          <figure class="module">
+            <figcaption class="caption">
+              <strong>Locatie 6 — binnenkort aangekondigd</strong>
+              Adres volgt
+            </figcaption>
+          </figure>
+          <figure class="module">
+            <figcaption class="caption">
+              <strong>Locatie 7 — binnenkort aangekondigd</strong>
+              Adres volgt
+            </figcaption>
+          </figure>
+          <figure class="module">
+            <figcaption class="caption">
+              <strong>Locatie 8 — binnenkort aangekondigd</strong>
+              Adres volgt
+            </figcaption>
+          </figure>
+          <figure class="module">
+            <figcaption class="caption">
+              <strong>Locatie 9 — binnenkort aangekondigd</strong>
+              Adres volgt
+            </figcaption>
+          </figure>
+          <figure class="module">
+            <figcaption class="caption">
+              <strong>Locatie 10 — binnenkort aangekondigd</strong>
+              Adres volgt
+            </figcaption>
+          </figure>
         </div>
       </div>
     </section>
